--- a/app/views/admin/books/confirm.html.erb
+++ b/app/views/admin/books/confirm.html.erb
@@ -9,8 +9,7 @@
                 <% @books.each do |book| %>
                 <div class="mx-2 mb-4">
                   <%=link_to admin_book_path(book.id) do %>
-                    <%= image_tag book.get_book_image(180, 120), style: "object-fit: cover; width: 180px; height: 120px;" %>
-                  <% end %>
+                    <%= image_tag book.image_url, style: "object-fit: cover; width: 180px; height: 120px;" %>
                   <%= book.title %> <br>
                   <%= book.item_caption %>
                 <% end %>
