--- a/app/views/public/post_comments/_form.html.erb
+++ b/app/views/public/post_comments/_form.html.erb
@@ -1,6 +1,6 @@
 <% if member_signed_in? %>
   <%= form_with model: [book, post_comment], local: false do |f| %>
-    <%= f.text_area :comment, rows:'5', placeholder: "コメントをここに", class: "w-100", id: "comment_textarea" %>
+    <%= f.text_area :comment, rows:'5', placeholder: "おすすめコメントはこちら", class: "w-100", id: "comment_textarea" %>
     <%= f.submit "送信" %>
   <% end %>
 <% else %>
