--- a/app/views/public/post_comments/_index.html.erb
+++ b/app/views/public/post_comments/_index.html.erb
@@ -2,7 +2,11 @@
   <tbody>
     <% book.post_comments.each do |post_comment| %>
     <tr>
-      <td><%= post_comment.member.nickname %>さんのコメント：</td>
+      <td>
+        <%= link_to favorites_member_path(post_comment.member) do %>
+          <%= post_comment.member.nickname %>さん
+        <% end %>
+        のコメント：</td>
       <td><%= post_comment.comment %></td>
       <td>
         <% if post_comment.member == current_member %>
